--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-  <h2>Demo Dynamic Mat Table</h2>
-  <!-- <app-time-picker></app-time-picker> -->
-  <!-- minimal use -->
-  <!-- <dynamic-mat-table tableName="demo_table" [columns]="fields" [dataSource]="dataSource"></dynamic-mat-table> -->
+<h2>Demo Dynamic Mat Table</h2>
+<!-- <app-time-picker></app-time-picker> -->
+<!-- minimal use -->
+<!-- <dynamic-mat-table tableName="demo_table" [columns]="fields" [dataSource]="dataSource"></dynamic-mat-table> -->
 
-  <app-full-features-dmt #demo0></app-full-features-dmt>
-  <!-- [alternativeRowStyle]="altRowStyle" -->
-  <!-- <mat-tab-group (selectedTabChange)="onTabChanged($event)">
+<app-simple-table></app-simple-table>
+<!-- [alternativeRowStyle]="altRowStyle" -->
+<!-- <mat-tab-group (selectedTabChange)="onTabChanged($event)">
     <mat-tab label="Demo 1">
       <ng-template matTabContent>
         <app-full-features-dmt #demo1></app-full-features-dmt>
